syntax = "proto3";

package api.cart.v1;

import "google/api/annotations.proto";

option go_package = "cart/api/cart/v1;v1";
option java_multiple_files = true;
option java_package = "api.cart.v1";

service CartService {
	rpc AddItem(AddItemReq) returns (AddItemResp) {
		option (google.api.http) = {
			post: "/v1/cart",
			body: "*"
		};
	}
	rpc GetCart(GetCartReq) returns (GetCartResp) {
		option (google.api.http) = {
			get: "/v1/cart/{user_id}"
		};
	}
	rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {
		option (google.api.http) = {
			delete: "/v1/cart/{user_id}"
		};
	}
}

message CartItem {
	uint32 product_id = 1;
	int32  quantity = 2;
}

message AddItemReq {
	uint32 user_id = 1;
	CartItem item = 2;
}

message AddItemResp {}

message EmptyCartReq {
	uint32 user_id = 1;
}

message EmptyCartResp {}

message GetCartReq {
	uint32 user_id = 1;
}

message GetCartResp {
	Cart cart = 1;
}

message Cart {
	uint32 user_id = 1;
	repeated CartItem items = 2;
}
